fix z-index

--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -295,7 +295,7 @@ body.modal-open
   background: #fff
   transition: box-shadow .2s ease
   card(1)
-  z-index: 1
+  z-index: 101
   &:hover
     card(2)
 
@@ -319,7 +319,6 @@ body.modal-open
   height: height_header px
   background-color: #fff
   position: absolute
-  z-index: 1
   outline: none
   .fa
     font-size: 1.3em
@@ -335,7 +334,7 @@ body.modal-open
 
 .project-search
   position: absolute
-  z-index: 2
+  z-index: 102
   transition: left .2s ease
   left: 40%
 
